site.scss
* {
  box-sizing: border-box;
}

html {
  min-height: 100%;
}

body {
  margin: 0 1em;
  min-height: 100%;
  background: white;
  color: #222;
  text-align: center;
  font-size: 20px;
  
  @media (max-width: 1000px) {
    font-size: 18px;
  }  
  @media (max-width: 800px) {
    font-size: 16px;
  }  
}

.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.spacer {
  height: 7.4em;
  @media(max-height: 800px) {
    height: 6em;
  }
  @media(max-height: 700px) {
    height: 5em;
  }
  @media(max-height: 600px) {
    height: 3em;
  }
  @media(max-height: 500px) {
    height: 2em;
  }
}

.intro {
  margin: 3em auto;
}

h1 {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 4.5em;
  line-height: 1.2em;
  margin: 0 0 0.2em 0;
  
  @media (max-width: 520px) {
    font-size: 4em;
  }
  @media (max-width: 420px) {
    font-size: 3.5em;
  }
  @media (max-width: 320px) {
    font-size: 3em;
  }
}

h2 {
  font-family: "Merriweather", serif;
  font-size: 1.5em;
  margin: 0;

  @media (max-width: 520px) {
    font-size: 1.25em;
  }
  @media (max-width: 400px) {
    font-size: 1.1em;
  }
}

p {
  font-family: "Merriweather", serif;
  font-size: 1em;
  line-height: 1.5em;
  margin: 0;
}

ul {
  padding: 0;
  margin: 1em 0;
}

li {
  display: inline-block;
  margin: 0 0.75em;
  list-style: none;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 1.33em;

  @media (max-width: 520px) {
    margin: 0 0.5em;
  }
}

a {
  background-color: transparent;
  text-decoration: none;
  color: inherit;
  display: inline-block;
  line-height: 1.2em;
  border-bottom: 0.1em solid transparent;
  
  &:active, &:hover {
    outline: 0;
  }
  
  &:hover {
    border-bottom-width: 0.15em;
  }
  
  &.link-about {
    border-bottom-color: #979797;
  }
  &.link-realm {
    border-bottom-color: #F0727D;
  }
  &.link-sonar {
    border-bottom-color: #49A1BB;
  }
  &.link-oliver {
    border-bottom-color: #A26FED;
  }
  &.link-realm {
    border-bottom-color: #F0727D;
  }
  &.link-cmu, &.link-mhci {
    border-bottom-color: #900;
  }
  &.link-cards {
    & > span {
      @extend a;
      display: inline;
      border-bottom: 0.1em solid #000;
    }
    &:hover > span {
      border-bottom-width: 0.15em;
    }
    &:hover > span:nth-of-type(2n) {
      border-bottom-color: #F00;      
    }
  }
  &.link-email {
    border-bottom-color: #000;
  }
}

.container-about {
  .info {
    text-align: left;
  }

  p {
    margin: 3em 2em;
    max-width: 25em;
  }

  small {
    display: block;
    font-size: 0.6em;
  }
}

